catching up with https://github.com/openjdk/loom/commit/22d75b9c3bf41a73bebd16b9e67fbfd0b55cae35